Добавлены стили для нового типа экшнбара

--- a/src/main/res/values/themes.xml
+++ b/src/main/res/values/themes.xml
@@ -71,4 +71,8 @@
         <item name="android:textColor">#FFFFFF</item>
         <item name="android:editTextStyle">@style/topfaceEditText</item>
     </style>
+
+    <style name="Topface.Theme.TransparentActionBarActivity" parent="@style/Theme.AppCompat">
+        <item name="actionBarStyle">@style/Widget.Topface.TransparentActionBar</item>
+    </style>
 </resources>
