--- a/src/main/res/values/styles.xml
+++ b/src/main/res/values/styles.xml
@@ -19,6 +19,12 @@
         </item>
     </style>
 
+    <style name="Widget.Topface.TransparentActionBar" parent="@style/Widget.AppCompat.Light.ActionBar">
+        <item name="android:background">@android:color/transparent</item>
+        <item name="android:icon">@android:color/transparent</item>
+        <item name="windowActionBarOverlay">true</item>
+    </style>
+
     <style name="Widget.Topface.ActionBar.Title" parent="ShadowBlackTop">
         <item name="android:layout_width">fill_parent</item>
         <item name="android:textSize">@dimen/action_bar_title_size</item>
