--- a/src/main/res/layout-v11/actionbar_container_title_view.xml
+++ b/src/main/res/layout-v11/actionbar_container_title_view.xml
@@ -20,7 +20,7 @@
             android:id="@+id/up_icon"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:src="@drawable/navigation_back_selector"
+            android:src="?android:homeAsUpIndicator"
             android:layout_gravity="center_vertical" />
 
         <LinearLayout
