убрал кнопку закрыть

--- a/src/main/res/values/themes.xml
+++ b/src/main/res/values/themes.xml
@@ -74,5 +74,10 @@
 
     <style name="Topface.Theme.TransparentActionBarActivity" parent="@style/Theme.AppCompat">
         <item name="actionBarStyle">@style/Widget.Topface.TransparentActionBar</item>
+        <item name="android:actionBarStyle" tools:ignore="NewApi">
+            @style/Widget.Topface.TransparentActionBar
+        </item>
+        <item name="windowActionBarOverlay">true</item>
+        <item name="android:windowActionBarOverlay" tools:ignore="NewApi">true</item>
     </style>
 </resources>
