--- a/src/main/res/values/styles.xml
+++ b/src/main/res/values/styles.xml
@@ -20,9 +20,10 @@
     </style>
 
     <style name="Widget.Topface.TransparentActionBar" parent="@style/Widget.AppCompat.Light.ActionBar">
-        <item name="android:background">@android:color/transparent</item>
-        <item name="android:icon">@android:color/transparent</item>
-        <item name="windowActionBarOverlay">true</item>
+        <item name="background">@android:color/transparent</item>
+        <item name="icon">@android:color/transparent</item>
+        <item name="android:background" tools:ignore="NewApi">@android:color/transparent</item>
+        <item name="android:icon" tools:ignore="NewApi">@android:color/transparent</item>
     </style>
 
     <style name="Widget.Topface.ActionBar.Title" parent="ShadowBlackTop">
