- Переезжаем на новый AdMob аккаунт, поэтому изменились Ad Unit ID - Отправляем в admob информацию о возрасте юзера - Поправлен краш - https://rink.hockeyapp.net/manage/apps/26531/app_versions/69/crash_reasons/20343662 - Удален неиспользуемые receiver - HashMap заменен на SparseArray в ConnectionChangeReceiver

--- a/src/main/res/layout/fragment_editor.xml
+++ b/src/main/res/layout/fragment_editor.xml
@@ -99,6 +99,7 @@
                 android:id="@+id/EditorLoginText"
                 />
             <EditText
+                android:inputType="text"
                 android:layout_width="150dp"
                 android:layout_height="wrap_content"
                 android:layout_margin="5dp"
