--- a/src/main/res/values/themes.xml
+++ b/src/main/res/values/themes.xml
@@ -80,4 +80,8 @@
         <item name="windowActionBarOverlay">true</item>
         <item name="android:windowActionBarOverlay" tools:ignore="NewApi">true</item>
     </style>
+
+    <style name="Theme.Topface.Chat" parent="Theme.Topface">
+        <item name="android:windowBackground">@color/bg_main</item>
+    </style>
 </resources>
