--- a/src/main/res/layout/layout_signin.xml
+++ b/src/main/res/layout/layout_signin.xml
@@ -1,13 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
-            android:layout_width="fill_parent"
-            android:layout_height="fill_parent"
-            android:fillViewport="true">
+    android:layout_width="fill_parent"
+    android:layout_height="fill_parent"
+    android:fillViewport="true">
 
     <RelativeLayout
         android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        >
+        android:layout_height="wrap_content">
 
 
         <LinearLayout
@@ -24,7 +23,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="40dp"
-                android:src="@drawable/auth_logo"/>
+                android:src="@drawable/auth_logo" />
 
             <LinearLayout
                 android:id="@+id/loLoginGroup"
@@ -33,13 +32,13 @@
                 android:orientation="vertical"
                 android:gravity="center_horizontal">
 
-                <EditText
+                <AutoCompleteTextView
                     android:id="@+id/edLogin"
-                    android:layout_width="fill_parent"
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:hint="@string/email"
                     android:inputType="textEmailAddress"
-                    style="@style/EditTextAuth"/>
+                    style="@style/EditTextAuth" />
 
                 <RelativeLayout
                     android:layout_width="fill_parent"
@@ -54,7 +53,7 @@
                         android:hint="@string/password"
                         android:inputType="textPassword"
                         android:paddingRight="24dp"
-                        style="@style/EditTextAuth"/>
+                        style="@style/EditTextAuth" />
 
                     <ImageButton
                         android:id="@+id/ivShowPassword"
@@ -64,7 +63,7 @@
                         android:src="@drawable/ic_show_password_selector"
                         android:background="@android:color/transparent"
                         android:layout_centerVertical="true"
-                        android:layout_alignRight="@id/edPassword"/>
+                        android:layout_alignRight="@id/edPassword" />
                 </RelativeLayout>
 
                 <RelativeLayout
@@ -78,7 +77,7 @@
                         android:layout_height="wrap_content"
                         android:layout_centerInParent="true"
                         android:visibility="gone"
-                        style="@android:style/Widget.ProgressBar.Small"/>
+                        style="@android:style/Widget.ProgressBar.Small" />
 
                     <Button
                         android:id="@+id/btnLogin"
@@ -86,7 +85,7 @@
                         android:layout_height="wrap_content"
                         android:text="@string/sign_in"
                         style="@style/AuthButtonsBigText"
-                        android:background="@drawable/btn_signin_selector"/>
+                        android:background="@drawable/btn_signin_selector" />
                 </RelativeLayout>
             </LinearLayout>
 
@@ -97,7 +96,7 @@
                 style="@style/AuthButtonsText"
                 android:text="@string/recover_password"
                 android:paddingTop="16dp"
-                android:paddingBottom="16dp"/>
+                android:paddingBottom="16dp" />
 
         </LinearLayout>
 
@@ -107,15 +106,14 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             style="@style/AuthBackButtonStyle"
-            android:layout_marginBottom="8dp"
-            />
+            android:layout_marginBottom="8dp" />
 
         <ImageView
             android:layout_alignParentBottom="true"
             android:layout_centerHorizontal="true"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:src="@drawable/auth_bg_bottom_spot"/>
+            android:src="@drawable/auth_bg_bottom_spot" />
 
     </RelativeLayout>
 
