#32741 изменен дизайн популярного пользователя, редизайн самого чата частично готов

--- a/src/main/res/layout/chat_user_gift.xml
+++ b/src/main/res/layout/chat_user_gift.xml
@@ -22,7 +22,7 @@
         <!-- message -->
         <TextView
             android:id="@+id/chat_message"
-            style="@style/chat_message" />
+            style="@style/chat_message.NoBack" />
     </LinearLayout>
 
     <!-- date -->
