--- a/src/main/res/layout/layout_popular_user_blocker.xml
+++ b/src/main/res/layout/layout_popular_user_blocker.xml
@@ -18,9 +18,13 @@
         android:layout_height="wrap_content"
         style="@style/ItemTitleText"
         android:gravity="center"
-        android:textSize="17sp"
+        android:textSize="18sp"
+        android:textColor="@color/text_color_gray"
         android:lineSpacingExtra="4sp"
-        android:shadowColor="#000000"
+        android:shadowColor="@null"
+        android:shadowRadius="0"
+        android:shadowDx="0"
+        android:shadowDy="0"
         android:layout_marginLeft="16dp"
         android:layout_marginRight="16dp"
         android:layout_marginTop="@dimen/popular_dialog_text_margin"
