--- a/src/main/res/layout/chat_date_divider.xml
+++ b/src/main/res/layout/chat_date_divider.xml
@@ -1,15 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="fill_parent"
-    android:layout_height="wrap_content"
-    android:layout_marginBottom="5dp">
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content">
 
-    <ImageView
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="1dp"
         android:layout_centerInParent="true"
-        android:src="@drawable/chat_divider_bg"
-        android:scaleType="fitXY"
+        android:background="@drawable/chat_date_line"
         android:layout_marginLeft="8dp"
         android:layout_marginRight="8dp" />
 
@@ -19,10 +17,13 @@
         android:layout_height="wrap_content"
         android:layout_centerInParent="true"
         android:gravity="center"
-        android:textColor="#979797"
+        android:textColor="#A7A7A7"
         android:textSize="12sp"
-        android:background="@color/bg_main"
+        android:background="@color/bg_holo"
+        android:shadowColor="@null"
+        android:shadowRadius="0"
+        android:shadowDy="0"
+        android:shadowDx="0"
         android:padding="2dp" />
 
 </RelativeLayout>
-
