--- a/src/main/res/layout/chat_friend.xml
+++ b/src/main/res/layout/chat_friend.xml
@@ -10,24 +10,18 @@
         layout="@layout/chat_date_divider"
         android:id="@+id/loDateDivider" />
 
-    <LinearLayout
+    <!-- message -->
+    <TextView
+        android:id="@+id/chat_message"
         android:layout_below="@id/loDateDivider"
-        android:id="@+id/user_info"
-        android:layout_marginTop="10dp"
-        style="@style/chat_message_layout.friend"
-        android:layout_alignParentLeft="true">
-
-        <!-- message -->
-        <TextView
-            android:id="@+id/chat_message"
-            style="@style/chat_message.friend" />
-    </LinearLayout>
+        android:layout_alignParentLeft="true"
+        style="@style/chat_message.friend" />
 
     <!-- date -->
     <TextView
         android:id="@+id/chat_date"
         style="@style/chat_date"
-        android:layout_toRightOf="@id/user_info"
-        android:layout_alignBottom="@id/user_info" />
+        android:layout_toRightOf="@id/chat_message"
+        android:layout_alignBottom="@id/chat_message" />
 
 </RelativeLayout>    
