--- a/src/main/res/layout/chat_friend_gift.xml
+++ b/src/main/res/layout/chat_friend_gift.xml
@@ -22,7 +22,7 @@
         <!-- message -->
         <TextView
             android:id="@+id/chat_message"
-            style="@style/chat_message.friend" />
+            style="@style/chat_message.friend.NoBack" />
     </LinearLayout>
 
     <!-- date -->
