--- a/src/main/res/layout/chat_user.xml
+++ b/src/main/res/layout/chat_user.xml
@@ -1,33 +1,28 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="fill_parent"
+    android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:background="@android:color/transparent"
     android:id="@+id/layout"
     android:gravity="right">
 
     <include
-        android:visibility="gone"
         layout="@layout/chat_date_divider"
         android:id="@+id/loDateDivider" />
 
-    <LinearLayout
+    <!-- message -->
+    <TextView
+        android:id="@+id/chat_message"
         android:layout_below="@id/loDateDivider"
-        android:id="@+id/user_info"
-        style="@style/chat_message_layout"
-        android:layout_alignParentRight="true">
-
-        <!-- message -->
-        <TextView
-            android:id="@+id/chat_message"
-            style="@style/chat_message" />
-    </LinearLayout>
+        android:layout_alignParentRight="true"
+        style="@style/chat_message" />
 
     <!-- date -->
     <TextView
         android:id="@+id/chat_date"
         style="@style/chat_date"
-        android:layout_toLeftOf="@id/user_info"
-        android:layout_alignBottom="@id/user_info" />
+        android:layout_toLeftOf="@id/chat_message"
+        android:text="13:30"
+        android:layout_alignBottom="@id/chat_message" />
 
 </RelativeLayout>    
