--- a/src/main/res/values/styles.xml
+++ b/src/main/res/values/styles.xml
@@ -50,6 +50,16 @@
         <item name="android:enabled">true</item>
     </style>
 
+    <style name="topfaceEditText.Holo" parent="topfaceEditText">
+        <item name="android:background">@drawable/edittext_holo_selector</item>
+        <item name="android:textColor">#8A8A8A</item>
+        <item name="android:textSize">18sp</item>
+        <item name="android:shadowColor">@color/text_white</item>
+        <item name="android:shadowRadius">1</item>
+        <item name="android:shadowDx">0</item>
+        <item name="android:shadowDy">2</item>
+    </style>
+
     <style name="topfaceCheckbox">
         <item name="android:background">@drawable/checkbox_selector</item>
 
@@ -512,22 +522,33 @@
     </style>
 
     <style name="chat_message" parent="NoShadowItemFont">
-        <item name="android:layout_width">fill_parent</item>
+        <item name="android:layout_width">wrap_content</item>
         <item name="android:layout_height">wrap_content</item>
         <item name="android:gravity">center_vertical|left</item>
         <item name="android:maxWidth">240dp</item>
-        <item name="android:textSize">15sp</item>
-        <item name="android:textColor">#527B94</item>
-        <item name="android:autoLink">all</item>
-    </style>
-
-    <style name="chat_message.friend">
+        <item name="android:textSize">18sp</item>
         <item name="android:textColor">#333333</item>
+        <item name="android:autoLink">all</item>
+        <item name="android:layout_marginTop">12dp</item>
+        <item name="android:background">@drawable/bg_message_user</item>
     </style>
 
-    <style name="chat_date" parent="ShadowBlackSolidText">
-        <item name="android:textColor">#787878</item>
-        <item name="android:textSize">13sp</item>
+    <style name="chat_message.NoBack" parent="chat_message">
+        <item name="android:background">@null</item>
+    </style>
+
+    <style name="chat_message.friend" parent="chat_message">
+        <item name="android:background">@drawable/bg_message_friend</item>
+    </style>
+
+    <style name="chat_message.friend.NoBack" parent="chat_message.friend">
+        <item name="android:background">@null</item>
+    </style>
+
+
+    <style name="chat_date" parent="NoShadowItemFont">
+        <item name="android:textColor">#A7A7A7</item>
+        <item name="android:textSize">11sp</item>
         <item name="android:layout_width">wrap_content</item>
         <item name="android:layout_height">wrap_content</item>
         <item name="android:minWidth">35dp</item>
