#27506 - Сохраняем email только после удачной авторизации - Показываем автокомплит даже при 1 введенном символе

--- a/src/main/res/layout/layout_signin.xml
+++ b/src/main/res/layout/layout_signin.xml
@@ -36,6 +36,7 @@
                     android:id="@+id/edLogin"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:completionThreshold="1"
                     android:hint="@string/email"
                     android:inputType="textEmailAddress"
                     style="@style/EditTextAuth" />
