--- a/src/main/res/layout/chat_footer_send_holo.xml
+++ b/src/main/res/layout/chat_footer_send_holo.xml
@@ -9,7 +9,7 @@
         android:id="@+id/send_gift_button"
         android:layout_width="46dp"
         android:layout_height="46dp"
-        android:layout_gravity="center_vertical"
+        android:layout_gravity="center_horizontal|bottom"
         android:background="@android:color/transparent"
         android:src="@drawable/btn_send_gift_holo_selector" />
 
@@ -22,7 +22,7 @@
         android:layout_marginBottom="6dp"
         android:layout_weight="1"
         android:gravity="center_vertical"
-        android:hint="@string/chat_write_message"
+        android:hint="@string/dating_message"
         android:imeOptions="actionSend"
         android:inputType="textCapSentences|textMultiLine"
         android:maxLines="5"
@@ -36,7 +36,7 @@
         android:id="@+id/btnSend"
         android:layout_width="46dp"
         android:layout_height="46dp"
-        android:layout_gravity="center"
+        android:layout_gravity="center_horizontal|bottom"
         android:background="@android:color/transparent"
         android:src="@drawable/btn_send_message_holo_selector" />
 
