--- a/src/main/res/values/styles.xml
+++ b/src/main/res/values/styles.xml
@@ -52,7 +52,8 @@
 
     <style name="topfaceEditText.Holo" parent="topfaceEditText">
         <item name="android:background">@drawable/edittext_holo_selector</item>
-        <item name="android:textColor">#8A8A8A</item>
+        <item name="android:textColorHint">#8A8A8A</item>
+        <item name="android:textColor">#333333</item>
         <item name="android:textSize">18sp</item>
         <item name="android:shadowColor">@color/text_white</item>
         <item name="android:shadowRadius">1</item>
