--- a/src/main/res/values/styles.xml
+++ b/src/main/res/values/styles.xml
@@ -50,15 +50,11 @@
         <item name="android:enabled">true</item>
     </style>
 
-    <style name="topfaceEditText.Holo" parent="topfaceEditText">
-        <item name="android:background">@drawable/edittext_holo_selector</item>
+    <style name="topfaceEditText.Holo">
+    <item name="android:background">@drawable/edittext_holo_selector</item>
         <item name="android:textColorHint">#8A8A8A</item>
         <item name="android:textColor">#333333</item>
         <item name="android:textSize">18sp</item>
-        <item name="android:shadowColor">@color/text_white</item>
-        <item name="android:shadowRadius">1</item>
-        <item name="android:shadowDx">0</item>
-        <item name="android:shadowDy">2</item>
     </style>
 
     <style name="topfaceCheckbox">
@@ -511,19 +507,19 @@
         <item name="android:visibility">gone</item>
     </style>
 
-    <style name="chat_message_layout">
-        <item name="android:layout_width">wrap_content</item>
+    <style name="ChatMessageLayout">
+    <item name="android:layout_width">wrap_content</item>
         <item name="android:layout_height">wrap_content</item>
         <item name="android:background">@drawable/bg_message_user</item>
         <item name="android:orientation">vertical</item>
     </style>
 
-    <style name="chat_message_layout.friend">
-        <item name="android:background">@drawable/bg_message_friend</item>
+    <style name="ChatMessageLayout.Friend">
+    <item name="android:background">@drawable/bg_message_friend</item>
     </style>
 
-    <style name="chat_message" parent="NoShadowItemFont">
-        <item name="android:layout_width">wrap_content</item>
+    <style name="ChatMessage" parent="NoShadowItemFont">
+    <item name="android:layout_width">wrap_content</item>
         <item name="android:layout_height">wrap_content</item>
         <item name="android:gravity">center_vertical|left</item>
         <item name="android:maxWidth">240dp</item>
@@ -534,21 +530,21 @@
         <item name="android:background">@drawable/bg_message_user</item>
     </style>
 
-    <style name="chat_message.NoBack" parent="chat_message">
-        <item name="android:background">@null</item>
+    <style name="ChatMessage.NoBack">
+    <item name="android:background">@null</item>
     </style>
 
-    <style name="chat_message.friend" parent="chat_message">
-        <item name="android:background">@drawable/bg_message_friend</item>
+    <style name="ChatMessage.Friend">
+    <item name="android:background">@drawable/bg_message_friend</item>
     </style>
 
-    <style name="chat_message.friend.NoBack" parent="chat_message.friend">
-        <item name="android:background">@null</item>
+    <style name="ChatMessage.Friend.NoBack">
+    <item name="android:background">@null</item>
     </style>
 
 
-    <style name="chat_date" parent="NoShadowItemFont">
-        <item name="android:textColor">#A7A7A7</item>
+    <style name="ChatDate" parent="NoShadowItemFont">
+    <item name="android:textColor">#A7A7A7</item>
         <item name="android:textSize">11sp</item>
         <item name="android:layout_width">wrap_content</item>
         <item name="android:layout_height">wrap_content</item>
@@ -559,33 +555,33 @@
         <item name="android:layout_marginLeft">8dp</item>
     </style>
 
-    <style name="chat_image">
-        <item name="android:layout_width">wrap_content</item>
+    <style name="ChatImage">
+    <item name="android:layout_width">wrap_content</item>
         <item name="android:layout_height">wrap_content</item>
         <item name="android:background">@drawable/bg_chat_image</item>
     </style>
 
-    <style name="chat_image.gift">
-        <item name="android:layout_width">130dp</item>
+    <style name="ChatImage.Gift">
+    <item name="android:layout_width">130dp</item>
         <item name="android:layout_height">130dp</item>
     </style>
 
-    <style name="chat_image.gift.holo">
-        <item name="android:background">@drawable/bg_chat_image_holo</item>
+    <style name="ChatImage.Gift.Holo">
+    <item name="android:background">@drawable/bg_chat_image_holo</item>
     </style>
 
-    <style name="chat_image.map" parent="NoShadowItemFont">
-        <item name="android:layout_width">146dp</item>
+    <style name="ChatImage.Map" parent="NoShadowItemFont">
+    <item name="android:layout_width">146dp</item>
         <item name="android:layout_height">100dp</item>
     </style>
 
-    <style name="chat_gift" parent="Gift">
-        <item name="android:layout_marginRight">8dp</item>
+    <style name="ChatGift" parent="Gift">
+    <item name="android:layout_marginRight">8dp</item>
         <item name="android:layout_marginLeft">0dp</item>
     </style>
 
-    <style name="chat_gift.friend">
-        <item name="android:layout_marginRight">0dp</item>
+    <style name="ChatGift.Friend">
+    <item name="android:layout_marginRight">0dp</item>
         <item name="android:layout_marginLeft">8dp</item>
     </style>
 
