#32741: пофиксены отспупы, добавлены dimens для теней

--- a/src/main/res/values/dimens.xml
+++ b/src/main/res/values/dimens.xml
@@ -8,4 +8,12 @@
     <dimen name="popular_dialog_text_margin">36dp</dimen>
     <dimen name="action_bar_title_size">18sp</dimen>
 
+    <!-- defaults for shadows -->
+    <item name="shadow_1px" format="float" type="dimen">1</item>
+    <item name="shadow_n1px" format="float" type="dimen">-1</item>
+    <item name="shadow_2px" format="float" type="dimen">2</item>
+    <item name="shadow_n2px" format="float" type="dimen">-2</item>
+    <item name="shadow_3px" format="float" type="dimen">3</item>
+    <item name="shadow_n3px" format="float" type="dimen">-3</item>
+
 </resources>
