#27506 показаны 5ть последних мыл, насильно выставлен цвет текста (была проблема на 2.3

--- a/src/main/res/values/styles.xml
+++ b/src/main/res/values/styles.xml
@@ -61,6 +61,7 @@
     <style name="topfaceDropDownItemStyle">
         <item name="android:textSize">14sp</item>
         <item name="android:padding">5dp</item>
+        <item name="android:textColor">@color/text_white</item>
         <item name="android:layout_height">wrap_content</item>
     </style>
 
