--- a/src/main/res/layout/layout_signin.xml
+++ b/src/main/res/layout/layout_signin.xml
@@ -4,7 +4,8 @@
             android:layout_height="fill_parent"
             android:fillViewport="true">
 
-    <RelativeLayout
+    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+        android:id="@+id/tf_auth_root"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:background="@drawable/auth_bg"
