--- a/src/main/res/layout/layout_signin.xml
+++ b/src/main/res/layout/layout_signin.xml
@@ -40,11 +40,12 @@
 
         <LinearLayout
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_height="fill_parent"
             android:orientation="vertical"
             android:layout_centerInParent="true"
             android:id="@+id/mainContainer"
-            android:gravity="center_horizontal"
+            android:layout_below="@id/redAlert"
+            android:gravity="center"
             android:paddingBottom="40dp">
 
             <ImageView
