#32741: fixed: balloons padding, PullToRefresh message color

--- a/src/main/res/layout/chat_friend.xml
+++ b/src/main/res/layout/chat_friend.xml
@@ -17,6 +17,7 @@
         android:layout_alignParentLeft="true"
         android:layout_below="@id/loDateDivider"
         android:paddingLeft="21dp"
+        android:layout_marginLeft="4dp"
         android:paddingRight="13dp" />
 
     <!-- date -->
