--- a/src/main/res/layout/chat_user_gift.xml
+++ b/src/main/res/layout/chat_user_gift.xml
@@ -12,6 +12,7 @@
         android:id="@+id/user_info"
         style="@style/ChatMessageLayout"
         android:layout_alignParentRight="true"
+        android:layout_marginRight="4dp"
         android:layout_below="@id/loDateDivider">
 
         <!--image-->
