--- a/src/main/res/layout/chat_friend_gift.xml
+++ b/src/main/res/layout/chat_friend_gift.xml
@@ -12,6 +12,7 @@
         android:id="@+id/user_info"
         style="@style/ChatMessageLayout.Friend"
         android:layout_alignParentLeft="true"
+        android:layout_marginLeft="4dp"
         android:layout_below="@id/loDateDivider">
 
         <!--image-->
