--- a/src/main/res/layout/fragment_chat.xml
+++ b/src/main/res/layout/fragment_chat.xml
@@ -20,6 +20,8 @@
         android:fadingEdge="none"
         android:listSelector="@android:color/transparent"
         android:stackFromBottom="true"
+        android:paddingLeft="2dp"
+        android:paddingRight="2dp"
         p2r:ptrHeaderTextColor="#8A8A8A"
         p2r:ptrMode="pullUpFromBottom"
         p2r:ptrOverScroll="false"
