--- a/src/main/res/layout/chat_footer_send_holo.xml
+++ b/src/main/res/layout/chat_footer_send_holo.xml
@@ -10,7 +10,7 @@
         android:layout_width="46dp"
         android:layout_height="46dp"
         android:layout_gravity="center_horizontal|bottom"
-        android:background="@android:color/transparent"
+        android:background="@drawable/bg_solid_holo_selector"
         android:src="@drawable/btn_send_gift_holo_selector" />
 
     <EditText
@@ -18,7 +18,7 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_gravity="center_vertical"
-        android:layout_marginTop="8dp"
+        android:layout_marginTop="6dp"
         android:layout_marginBottom="6dp"
         android:layout_weight="1"
         android:gravity="center_vertical"
@@ -37,7 +37,7 @@
         android:layout_width="46dp"
         android:layout_height="46dp"
         android:layout_gravity="center_horizontal|bottom"
-        android:background="@android:color/transparent"
+        android:background="@drawable/bg_solid_holo_selector"
         android:src="@drawable/btn_send_message_holo_selector" />
 
 </LinearLayout>
