--- a/src/main/res/values/styles.xml
+++ b/src/main/res/values/styles.xml
@@ -565,7 +565,8 @@
         <item name="android:layout_height">wrap_content</item>
         <item name="android:minWidth">35dp</item>
         <item name="android:singleLine">true</item>
-        <item name="android:layout_marginBottom">8dp</item>
+        <item name="android:gravity">center</item>
+        <item name="android:layout_marginBottom">12dp</item>
         <item name="android:layout_marginRight">8dp</item>
         <item name="android:layout_marginLeft">8dp</item>
     </style>
