--- a/src/main/res/layout/ac_photos.xml
+++ b/src/main/res/layout/ac_photos.xml
@@ -1,16 +1,30 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="fill_parent"
-    android:layout_height="fill_parent"
-    android:orientation="vertical">
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:orientation="vertical">
 
     <!-- gallery -->
-    <com.topface.topface.ui.views.ImageSwitcherLooped
-        android:id="@+id/galleryAlbum"
-        android:layout_width="fill_parent"
-        android:layout_height="fill_parent" />
+    <ViewStub
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout="@layout/ac_photos_image_switcher"
+        android:id="@+id/gallery_album_stub"
+        android:inflatedId="@+id/galleryAlbum"/>
 
     <!-- header bar -->
-    <include layout="@layout/control_photo_album" />
+    <include layout="@layout/control_photo_album"/>
+
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:background="@color/bg_main"
+        android:visibility="gone"
+        android:id="@+id/lockScreen"/>
+
+    <com.topface.topface.ui.views.LockerView
+        android:id="@+id/llvProfileLoading"
+        style="@style/LoadingLocker"
+        android:visibility="gone"/>
 
 </RelativeLayout>
