--- a/src/main/res/values/styles.xml
+++ b/src/main/res/values/styles.xml
@@ -308,12 +308,19 @@
     </style>
 
     <style name="LeftMenuButtons" parent="ShadowBlackBottom">
-        <item name="android:layout_width">fill_parent</item>
+        <item name="android:layout_width">match_parent</item>
+        <!--<item name="android:layout_weight">1</item>-->
         <item name="android:layout_height">wrap_content</item>
         <item name="android:textColor">@color/left_menu_text</item>
         <item name="android:paddingLeft">10dp</item>
+        <item name="android:paddingRight">50dp</item>
+        <item name="android:lines">1</item>
+        <item name="android:maxLines">1</item>
+        <item name="android:singleLine">true</item>
+        <item name="android:ellipsize">end</item>
         <item name="android:gravity">left|center_vertical</item>
         <item name="android:drawablePadding">12dp</item>
+        <!--<item name="android:background">@android:color/transparent</item>-->
         <item name="android:background">@drawable/bg_left_menu_item_selector</item>
         <item name="android:textSize">16sp</item>
     </style>
