--- a/src/main/res/layout/item_left_menu_button_with_badge.xml
+++ b/src/main/res/layout/item_left_menu_button_with_badge.xml
@@ -1,38 +1,23 @@
 <?xml version="1.0" encoding="utf-8"?>
 
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical"
+<RelativeLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_height="wrap_content"
+    android:background="@drawable/bg_left_menu_item_selector"
+    android:id="@+id/leftMenuCellLayout">
 
-    <Button
+    <TextView
         android:id="@+id/btnMenu"
+        android:layout_width="match_parent"
+        android:layout_toLeftOf="@+id/tvCounterBadge"
+        android:layout_centerVertical="true"
         style="@style/LeftMenuButtons"/>
 
     <TextView
-        android:id="@+id/tvCounterBadge"
-        android:layout_alignBaseline="@+id/btnMenu"
+        android:id="@id/tvCounterBadge"
+        android:layout_alignParentRight="true"
+        android:layout_centerVertical="true"
         style="@style/Informer"/>
+
 </RelativeLayout>
-
-<!--<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"-->
-    <!--android:orientation="horizontal"-->
-    <!--android:id="@+id/leftMenuCellLayout"-->
-    <!--android:layout_width="match_parent"-->
-    <!--android:clickable="true"-->
-    <!--android:background="@drawable/bg_left_menu_item_selector"-->
-    <!--android:layout_height="wrap_content">-->
-
-    <!--<Button-->
-        <!--android:id="@+id/btnMenu"-->
-        <!--android:lines="1"-->
-        <!--android:maxLines="1"-->
-        <!--android:ellipsize="end"-->
-        <!--android:singleLine="true"-->
-        <!--style="@style/LeftMenuButtons"/>-->
-
-    <!--<TextView-->
-        <!--android:id="@+id/tvCounterBadge"-->
-        <!--android:layout_alignBaseline="@+id/btnMenu"-->
-        <!--style="@style/Informer"/>-->
-<!--</LinearLayout>-->
