#27743: Текст "Я нравлюсь" не умещается на вкладку в левом меню на корейской локали добавлены правки по комментам от Руслана Ким

--- a/src/main/res/values/styles.xml
+++ b/src/main/res/values/styles.xml
@@ -308,6 +308,7 @@
     </style>
 
     <style name="LeftMenuButtons" parent="ShadowBlackBottom">
+        <item name="android:layout_width">match_parent</item>
         <item name="android:layout_height">wrap_content</item>
         <item name="android:textColor">@color/left_menu_text</item>
         <item name="android:paddingLeft">10dp</item>
